yaml_parser/tests/fail/directive-variants-3.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 1, column 1
  |
1 | %YAML 1.1 1.2
  | ^
